fix vertical alignment of text

--- a/experience.css
+++ b/experience.css
@@ -4,7 +4,8 @@ body {
   color: #8892b0 !important;
   font-family: Calibre, Inter, "San Francisco", "SF Pro Text", -apple-system,
     system-ui, sans-serif !important;
-  margin: 2% !important;
+  margin: 0 auto !important;
+  padding: 2% !important;
   max-width: 1350px;
 }
 .section {
@@ -13,6 +14,7 @@ body {
 .tasks {
   font-size: 14px;
 }
+
 span.location {
   float: right;
   margin-right: 25px;
